arreglando bugs y completando los informes

--- a/help/html/misiones.html
+++ b/help/html/misiones.html
@@ -23,7 +23,8 @@
     </section>
 </main>
 <footer>
-    <p>¡Que la Fuerza te acompañe!</p>
+    <img src="logo.png" alt="Logo de la Empresa" width="100">
+    <p>Flota Espacial S.L.</p>
 </footer>
 </body>
 </html>
