--- a/help/html/modo_oscuro.html
+++ b/help/html/modo_oscuro.html
@@ -15,14 +15,15 @@
     <p>El Modo Oscuro es una opción que permite cambiar el esquema de colores de la aplicación para reducir la fatiga visual, especialmente en entornos con poca luz.</p>
     <h3>Cómo Activar el Modo Oscuro</h3>
     <ol>
-        <li>Dirígete al menú de <strong>Preferencias</strong>.</li>
+        <li>Dirígete al menú desplegable dentro de <strong>Archivo</strong>.</li>
         <li>Selecciona la opción de <strong>Modo Oscuro</strong>.</li>
-        <li>Activa el interruptor para habilitar el Modo Oscuro.</li>
+        <li>Permite alternar entre <strong>Modo Oscuro</strong> y <strong>Modo Claro</strong>.</li>
     </ol>
     <p>Una vez activado, la aplicación cambiará automáticamente a un esquema de colores oscuros.</p>
 </main>
 <footer>
-    <p>&copy; 2025 Flota Espacial</p>
+    <img src="logo.png" alt="Logo de la Empresa" width="100">
+    <p>Flota Espacial S.L.</p>
 </footer>
 </body>
 </html>
