--- a/help/html/naves.html
+++ b/help/html/naves.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Naves</title>
+    <title>Naves Espaciales</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -23,7 +23,8 @@
     </section>
 </main>
 <footer>
-    <p>¡Que la Fuerza te acompañe!</p>
+    <img src="logo.png" alt="Logo de la Empresa" width="100">
+    <p>Flota Espacial S.L.</p>
 </footer>
 </body>
 </html>
