--- a/help/html/informes.html
+++ b/help/html/informes.html
@@ -20,9 +20,32 @@
             <li>Visualizar estadísticas de misiones completadas.</li>
         </ul>
     </section>
+
+    <section>
+        <h2>Tipos de Informes Disponibles</h2>
+
+        <h3>1. Informe General: Listado de Naves Espaciales</h3>
+        <p>Muestra todas las naves junto con su clase y capacidad máxima.</p>
+
+        <h3>2. Informe General: Listado de Tripulantes</h3>
+        <p>Lista todos los tripulantes de la flota con sus rangos y naves asignadas.</p>
+
+        <h3>3. Informe Agrupado: Tripulación por Nave</h3>
+        <p>Agrupa a los tripulantes según la nave a la que pertenecen.</p>
+
+        <h3>4. Informe Agrupado: Misiones por Estado</h3>
+        <p>Agrupa las misiones realizadas según su estado (Completada, Fallida, En progreso).</p>
+
+        <h3>5. Informe Dinámico: Misiones de una Nave</h3>
+        <p>Permite introducir el ID de una nave y obtener un informe de todas sus misiones.</p>
+
+        <h3>6. Informe Dinámico: Tripulación por Rango</h3>
+        <p>Permite introducir un rango (Capitán, Ingeniero, Piloto) y obtener una lista de tripulantes en ese nivel.</p>
+    </section>
 </main>
 <footer>
-    <p>¡Que la Fuerza te acompañe!</p>
+    <img src="logo.png" alt="Logo de la Empresa" width="100">
+    <p>Flota Espacial S.L.</p>
 </footer>
 </body>
 </html>
