--- a/help/html/modo_oscuro.html
+++ b/help/html/modo_oscuro.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modo Oscuro</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Incluye aquí tu archivo CSS si lo tienes -->
+    <link rel="stylesheet" href="styles_light.css"> <!-- Incluye aquí tu archivo CSS si lo tienes -->
 </head>
 <body>
 <header>
-    <h1>Modo Oscuro</h1>
+    <h1>Modo Oscuro/Claro</h1>
 </header>
 <main>
     <h2>Activar Modo Oscuro</h2>
     <p>El Modo Oscuro es una opción que permite cambiar el esquema de colores de la aplicación para reducir la fatiga visual, especialmente en entornos con poca luz.</p>
     <h3>Cómo Activar el Modo Oscuro</h3>
     <ol>
-        <li>Dirígete al menú desplegable dentro de <strong>Archivo</strong>.</li>
-        <li>Selecciona la opción de <strong>Modo Oscuro</strong>.</li>
-        <li>Permite alternar entre <strong>Modo Oscuro</strong> y <strong>Modo Claro</strong>.</li>
+        <li>Dirígete al menú desplegable dentro de <span style="color: #6660E3;">Archivo</span>.</li>
+        <li>Selecciona la opción de <span style="color: #6660E3;">Modo Oscuro</span>.</li>
+        <li>Permite alternar entre <span style="color: #6660E3;">Modo Oscuro</span> y <span style="color: #6660E3;">Modo Claro</span>.</li>
     </ol>
     <p>Una vez activado, la aplicación cambiará automáticamente a un esquema de colores oscuros.</p>
 </main>
 <footer>
-    <img src="logo.png" alt="Logo de la Empresa" width="100">
+    <img src="logo.png" alt="Logo de la Empresa" width="80">
     <p>Flota Espacial S.L.</p>
 </footer>
 </body>
