--- a/help/html/tripulantes.html
+++ b/help/html/tripulantes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tripulantes</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles_light.css">
 </head>
 <body>
 <header>
@@ -23,7 +23,7 @@
     </section>
 </main>
 <footer>
-    <img src="logo.png" alt="Logo de la Empresa" width="100">
+    <img src="logo.png" alt="Logo de la Empresa" width="80">
     <p>Flota Espacial S.L.</p>
 </footer>
 </body>
