--- a/help/html/naves.html
+++ b/help/html/naves.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Naves Espaciales</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles_light.css">
 </head>
 <body>
 <header>
-    <h1>Naves</h1>
+    <h1>Naves Espaciales</h1>
 </header>
 <main>
     <section>
@@ -23,7 +23,7 @@
     </section>
 </main>
 <footer>
-    <img src="logo.png" alt="Logo de la Empresa" width="100">
+    <img src="logo.png" alt="Logo de la Empresa" width="80">
     <p>Flota Espacial S.L.</p>
 </footer>
 </body>
